--- a/frontend/src/components/landing/Hwt/Hwt.module.scss
+++ b/frontend/src/components/landing/Hwt/Hwt.module.scss
@@ -1,10 +1,11 @@
 // Hwt.module.scss
 .Container {
   height: 100%;
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   padding: 20px;
+ 
 }
 
 .Containertitle {
