--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,7 @@ h1 {
   line-height: 1.1;
   font-weight: 700;
 }
+
+/* * {
+  outline: 1px solid red;
+} */
